tests/samples/slot-default-outside-extends/template.blate
// error: slot default outside extends
{@slot foo} Foo foo {/slot}
{@slot bar_baz} {:default} Bar baz {/slot}